@@ -15,6 +15,7 @@ lib/Config/Model/AnyId.pm
 lib/Config/Model/AnyThing.pm
 lib/Config/Model/AutoRead.pm
 lib/Config/Model/Backend/Any.pm
+lib/Config/Model/Backend/ShellVar.pm
 lib/Config/Model/Backend/Yaml.pm
 lib/Config/Model/CheckList.pm
 lib/Config/Model/Describe.pm
@@ -37,6 +38,7 @@ lib/Config/Model/ValueComputer.pm
 lib/Config/Model/WarpedNode.pm
 lib/Config/Model/WarpedThing.pm
 lib/Config/Model/WizardHelper.pm
+lib/Config/Model/models/PopCon.pl
 t/array_id.t
 t/auto_load_model.t
 t/auto_read.t
@@ -57,6 +59,7 @@ t/node.t
 t/node_get_set.t
 t/obj_tree_scanner.t
 t/pod.t
+t/popcon_config.t
 t/recursive_warp_value.t
 t/report.t
 t/search_element.t
